--- a/polls/templates/polls/actions/add.html
+++ b/polls/templates/polls/actions/add.html
@@ -9,24 +9,30 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'index' %}">Coggle Analysis</a>
+        <a class="navbar-brand ml-4" href="{% url 'index' %}">Coggle Analysis</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                {% if not user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}">Главная<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Авторизация</a>
-                </li>
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                   <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+                   <a class="nav-link" href="{% url 'login' %}">Авторизация</a>
                 </li>
                 {% endif %}
             </ul>
+        {% if user.is_authenticated %}
+            <ul class="navbar-nav ml-auto mr-4">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{ user }}
+                    </a>
+                  <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="{% url 'logout' %}">Выйти</a>
+                  </div>
+                </li>
+            </ul>
+            {% endif %}
         </div>
     </nav>
 
@@ -44,18 +50,23 @@
         <form action="{% url 'add_confirm' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
-                <label for="title-text">Название:</label>
+                <label for="title-text">Введите название:</label>
                 <input name="title" type="text" class="form-control" id="title-text">
             </div>
 
             <div class="form-group">
-                <label for="about-text" class="col-form-label">Описание:</label>
+                <label for="about-text" class="col-form-label">Введите описание работы:</label>
                 <textarea name="about" class="form-control" id="about-text"></textarea>
             </div>
 
             <div class="form-group">
-                <label for="true-text">Правильная работа:</label>
+                <label for="true-text">Ссылка на правильную работу:</label>
                 <input name="true_work" type="text" class="form-control" id="true-text">
+            </div>
+
+            <div class="form-group">
+                <label for="keys-text" class="col-form-label">Ключевые текстовые значения:</label>
+                <textarea name="keys" class="form-control" id="keys-text"></textarea>
             </div>
 
             <label>Выберите .xls файл с ссылками на работы</label>
