create single pages for error and success responses

--- a/polls/templates/registration/password_reset_done.html
+++ b/polls/templates/registration/password_reset_done.html
@@ -37,7 +37,7 @@
     <div class="container mx-auto mt-5">
         <p class="text-center font-weight-bolder mt-4" >Сброс пароля</p>
         <p class="text-center">Инструкции по сбросу пароля были направлены на ваш email адрес.</p>
-        <p class="text-center">  Если письмо не пришло в течение нескольких минут, проверьте папку спам</p>
+        <p class="text-center">  Если письмо не пришло в течение нескольких минут, то проверьте папку спам</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
