--- a/polls/templates/registration/logged_out.html
+++ b/polls/templates/registration/logged_out.html
@@ -19,7 +19,18 @@
                    <a class="nav-link" href="{% url 'login' %}">Авторизация</a>
                 </li>
                 {% endif %}
-            </ul>
+            </      {% endif %}
+        </div>
+    </nav>
+
+    <div class="container mx-auto mt-5" style="width: 350px">
+        <p><h5>Вы успешно вышли из аккаунта!</h5></p>
+        <p><a href="{% url 'login' %}">Вернуться на страницу авторизации</a></p>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpaul>
             {% if user.is_authenticated %}
             <ul class="navbar-nav ml-auto mr-4">
                 <li class="nav-item dropdown">
