change registration html pages with using django template lang

--- a/polls/templates/polls/actions/add.html
+++ b/polls/templates/polls/actions/add.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Добавление{% endblock %}
+{% block site_title %}Добавление{% endblock %}
 
 {% block content %}
     <div class="container mt-3">
