--- a/polls/templates/polls/homework_delete.html
+++ b/polls/templates/polls/homework_delete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Список работ{% endblock %}
+{% block site_title %}Список работ{% endblock %}
 
 {% block content %}
     <div class="container mt-3">
