--- a/polls/templates/polls/homeworks_add.html
+++ b/polls/templates/polls/homeworks_add.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Добавление работы{% endblock %}
+{% block site_title %}Добавление работы{% endblock %}
 
 {% block content %}
     <div class="container mt-3">
