--- a/polls/templates/polls/task.html
+++ b/polls/templates/polls/task.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Работа{% endblock %}
+{% block site_title %}Работа{% endblock %}
 
 {% block content %}
     <div class="container mt-3">
