--- a/polls/templates/base.html
+++ b/polls/templates/base.html
@@ -1,83 +1,10 @@
-<
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Работа | Coggle Analysis</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand ml-4" href="{% url 'index' %}">Coggle Analysis</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                {% if not user.is_authenticated %}
-                <li class="nav-item">
-                   <a class="nav-link" href="{% url 'login' %}">Авторизация</a>
-                </li>
-                {% endif %}
-            </ul>
-            <ul class="navbar-nav ml-auto mr-4">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{ user }}
-                </a>
-              <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{% url 'logout' %}">Выйти</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-    </nav>
-
-
-    <div class="container mt-3">
-        <p class="text-center font-weight-bolder mt-4" >Описание работы</p>
-
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
-            <li class="breadcrumb-item active">Список работ</li>
-            <li class="breadcrumb-item active" aria-current="page">Описание</li>
-        </ol>
-
-        <table class="table">
-            <tbody>
-                <tr href="#">
-                    <th scope="row">Имя ученика</th>
-                    <td>{{ homework.name }}</td>
-                </tr>
-                <tr>
-                    <th scope="row">Ссылка на работу</th>
-                    <td><a href="https://coggle.it/diagram/{{ homework.link }}">Ссылка</a></td>
-                </tr>
-                <tr>
-                    <th scope="row">Оценка структурного сходства</th>
-                    <td>{{ homework.similarity }} %</td>
-                </tr>
-                <tr>
-                    <th scope="row">Оценка сходства текстового содержания</th>
-                    <td>{{ homework.plagiarism }} %</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-</html>!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>{% block site_title %}{% endblock %} | Coggle Analysis</title>
+    <title>{% block site_title %}Базовая страница{% endblock %} | Coggle Analysis</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
