--- a/polls/templates/polls/actions/delete.html
+++ b/polls/templates/polls/actions/delete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Удаление{% endblock %}
+{% block site_title %}Удаление{% endblock %}
 
 {% block content %}
 <div class="container mt-3">
