--- a/polls/templates/polls/actions/error.html
+++ b/polls/templates/polls/actions/error.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Успешно{% endblock %}
+{% block site_title %}Успешно{% endblock %}
 
 {% block content %}
     <div class="container mt-3">
