--- a/polls/templates/polls/homeworks.html
+++ b/polls/templates/polls/homeworks.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Список работ{% endblock %}
+{% block site_title %}Список работ{% endblock %}
 
 {% block content %}
     <div class="container mt-3">
