--- a/main_site/templates/main_site/actions/error.html
+++ b/main_site/templates/main_site/actions/error.html
@@ -1,6 +1,6 @@
 {% extends "main_site/base.html" %}
 
-{% block site_title %}Успешно{% endblock %}
+{% block site_title %}Ошибка{% endblock %}
 
 {% block content %}
     <div class="container mt-3">
