change reg template

--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% extends 'registration/base_reg.html' %}
+{% extends 'registration/base.html' %}
 
 {% block site_title %}Регистрация{% endblock %}
 
