--- a/main_site/templates/main_site/actions/change_confirm.html
+++ b/main_site/templates/main_site/actions/change_confirm.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "main_site/base.html" %}
 
 {% block site_title %}Изменение{% endblock %}
 
+{% block page_title %}Изменение описания{% endblock %}
+
 {% block content %}
     <div class="container mt-3">
-        <p class="text-center font-weight-bolder mt-4" >Изменение описания</p>
-
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'index' %}">Главная</a></li>
