--- a/main_site/templates/main_site/base.html
+++ b/main_site/templates/main_site/base.html
@@ -71,22 +71,28 @@
 
       {% block menu %}{% endblock %}
 
-{#      <!-- Nav Item - Utilities Collapse Menu -->#}
-{#      <li class="nav-item">#}
-{#        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">#}
-{#          <i class="fas fa-fw fa-wrench"></i>#}
-{#          <span>Настройки</span>#}
-{#        </a>#}
-{#        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">#}
-{#          <div class="bg-white py-2 collapse-inner rounded">#}
-{#            <h6 class="collapse-header">Custom Utilities:</h6>#}
-{#            <a class="collapse-item" href="utilities-color.html">Colors</a>#}
-{#            <a class="collapse-item" href="utilities-border.html">Borders</a>#}
-{#            <a class="collapse-item" href="utilities-animation.html">Animations</a>#}
-{#            <a class="collapse-item" href="utilities-other.html">Other</a>#}
-{#          </div>#}
-{#        </div>#}
-{#      </li>#}
+      <!-- Divider -->
+      <hr class="sidebar-divider">
+
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        Настройки
+      </div>
+
+      <!-- Nav Item - Utilities Collapse Menu -->
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTokens" aria-expanded="true" aria-controls="collapseTokens">
+          <i class="fas fa-fw fa-user-cog"></i>
+          <span>Ключи доступа</span>
+        </a>
+        <div id="collapseTokens" class="collapse" aria-labelledby="headingTokens" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Операции:</h6>
+            <a class="collapse-item" href="{% url 'coggle_auth' %}">Обновить для Coggle</a>
+            <a class="collapse-item" href="{% url 'miro_auth' %}">Обновить для Miro</a>
+          </div>
+        </div>
+      </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider">
